# MoneyKeeper

./: TODO
app/android/: .gitignore
app/android/app/: build.gradle
app/android/app/src/main/: .gitignore
app/android/app/src/main/jni/: Android.mk  Application.mk  budny_moneykeeper_cv_Filters.h  budny_moneykeeper_cv_Operations.h  budny_moneykeeper_cv_Recognizer.h  cv_jni.cpp
app/android/gradle/wrapper/: gradle-wrapper.properties
model/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  train
model/src/: train.cpp
src/: .gitignore  build.gradle  settings.gradle
src/app/: build.gradle  proguard-rules.pro
src/app/src/main/: AndroidManifest.xml
src/app/src/main/jni/: Android.mk  Application.mk  budny_moneykeeper_cv_Filters.h  cv_jni.cpp
src/app/src/main/jni/cv/: filters.cpp  filters.hpp  operations.cpp
src/app/src/main/res/drawable/: ic_account_balance_wallet_black.xml  ic_add_white.xml  (+3 more)
tools/digit_recognizer/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
tools/digit_recognizer/recognizer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  recognizer
tools/digit_recognizer/recognizer/src/: recognizer.cpp
tools/digit_recognizer/src/: classifier.cpp  recognizer.cpp  trainer.cpp
tools/digit_recognizer/src/utils/: filters.cpp  mnist_loader.cpp  operations.cpp
tools/digit_recognizer/src/utils/include/: dataset_loader.hpp  filters.hpp  mnist_loader.hpp  operations.hpp
tools/digit_recognizer/trainer/: CMakeLists.txt  Makefile  trainer
tools/digit_recognizer/trainer/src/: trainer.cpp
(+282 files in other folders)
